force-app/main/default/objects/IFv2_Request__c/IFv2_Request__c.object-meta.xml
<CustomObject>
    <description>Request Object to store all information for each request</description>
    <label>Request</label>
    <nameField>
        <displayFormat>INF-{0000000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>