force-app/main/default/objects/IFv2_Request__c/fields/AddresswithPINcode__c.field-meta.xml
<CustomField>
    <fullName>AddresswithPINcode__c</fullName>
    <formula>SupplierCustomerNo__r.BillingStreet + &apos; &apos; +
	SupplierCustomerNo__r.BillingCity + &apos; &apos; +
	 SupplierCustomerNo__r.BillingState + &apos; &apos; +
		 SupplierCustomerNo__r.BillingCountry + &apos; &apos; +
			 SupplierCustomerNo__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address with PIN code</label>
    <type>Text</type>
</CustomField>