force-app/main/default/objects/IFv2_Request__c/fields/Applicant_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Cost_Center__c</fullName>
    <formula>CreatedBy.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Cost Center</label>
    <type>Text</type>
</CustomField>