force-app/main/default/objects/IFv2_Request__c/fields/ApplicantCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCostCenter__c</fullName>
    <formula>Owner:User.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>