force-app/main/default/objects/IFv2_Request__c/fields/ApplicantDepartment__c.field-meta.xml
<CustomField>
    <fullName>ApplicantDepartment__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>