force-app/main/default/objects/IFv2_Request__c/fields/ApplicantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantFirstName__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>