force-app/main/default/objects/IFv2_Request__c/fields/ApplicantLastName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantLastName__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>