force-app/main/default/objects/IFv2_Request__c/fields/ApplicantLocation__c.field-meta.xml
<CustomField>
    <fullName>ApplicantLocation__c</fullName>
    <formula>Owner:User.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>