force-app/main/default/objects/IFv2_Request__c/fields/ApplicantNTUser__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNTUser__c</fullName>
    <formula>Owner:User.NT_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant NT User</label>
    <type>Text</type>
</CustomField>