force-app/main/default/objects/IFv2_Request__c/fields/ApplicantPhone__c.field-meta.xml
<CustomField>
    <fullName>ApplicantPhone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>