force-app/main/default/objects/IFv2_Request__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>Used in China property gate application.</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>EWAK Tooling in Supplier</fullName>
            </value>
            <value>
                <fullName>EWAK Tooling in own location</fullName>
            </value>
            <value>
                <fullName>MAE</fullName>
            </value>
            <value>
                <fullName>MAE related to BAU, Software, Vehicles, Office equipments except PC</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>