force-app/main/default/objects/IFv2_Request__c/fields/Approval_by__c.field-meta.xml
<CustomField>
    <fullName>Approval_by__c</fullName>
    <label>Approval by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>