force-app/main/default/objects/IFv2_Request__c/fields/ApprovalRoute__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRoute__c</fullName>
    <label>Approval route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Sales Entities</fullName>
            </value>
            <value>
                <fullName>SG CN</fullName>
            </value>
            <value>
                <fullName>SG DE HiP</fullName>
            </value>
            <value>
                <fullName>SG DE St</fullName>
            </value>
            <value>
                <fullName>SGFR</fullName>
            </value>
            <value>
                <fullName>SGHU, Direct</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect blue collar</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect white collar</fullName>
            </value>
            <value>
                <fullName>SGHU, Trainee</fullName>
            </value>
            <value>
                <fullName>SGIN</fullName>
            </value>
            <value>
                <fullName>SGIT</fullName>
            </value>
            <value>
                <fullName>SGJP</fullName>
            </value>
            <value>
                <fullName>SGKR</fullName>
            </value>
            <value>
                <fullName>SGPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>