force-app/main/default/objects/IFv2_Request__c/fields/Approver10__c.field-meta.xml
<CustomField>
    <fullName>Approver10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers10</relationshipName>
    <type>Lookup</type>
</CustomField>