force-app/main/default/objects/IFv2_Request__c/fields/Approver11__c.field-meta.xml
<CustomField>
    <fullName>Approver11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 11</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers11</relationshipName>
    <type>Lookup</type>
</CustomField>