force-app/main/default/objects/IFv2_Request__c/fields/Approver12__c.field-meta.xml
<CustomField>
    <fullName>Approver12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 12</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers12</relationshipName>
    <type>Lookup</type>
</CustomField>