force-app/main/default/objects/IFv2_Request__c/fields/AQT_CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>AQT_CustomerGroup__c</fullName>
    <label>Customer Group</label>
    <type>TextArea</type>
</CustomField>