force-app/main/default/objects/IFv2_Request__c/fields/AQT_Discount__c.field-meta.xml
<CustomField>
    <fullName>AQT_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>