force-app/main/default/objects/IFv2_Request__c/fields/AQT_NetAmount__c.field-meta.xml
<CustomField>
    <fullName>AQT_NetAmount__c</fullName>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>