force-app/main/default/objects/IFv2_Request__c/fields/AQT_QuotationNumber__c.field-meta.xml
<CustomField>
    <fullName>AQT_QuotationNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Number</label>
    <referenceTo>AQT_Quote__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>