force-app/main/default/objects/IFv2_Request__c/fields/AQT_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>AQT_TotalAmount__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>