force-app/main/default/objects/IFv2_Request__c/fields/ArchivalStatus__c.field-meta.xml
<CustomField>
    <fullName>ArchivalStatus__c</fullName>
    <label>Archival Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>considerforzipping</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>ToBeDeleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>