force-app/main/default/objects/IFv2_Request__c/fields/ArchiveError__c.field-meta.xml
<CustomField>
    <fullName>ArchiveError__c</fullName>
    <label>Archive Error</label>
    <type>TextArea</type>
</CustomField>