force-app/main/default/objects/IFv2_Request__c/fields/AreAllMaterialsValidated__c.field-meta.xml
<CustomField>
    <fullName>AreAllMaterialsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All materials for concession validation</description>
    <label>Are All Materials Validated</label>
    <type>Checkbox</type>
</CustomField>