force-app/main/default/objects/IFv2_Request__c/fields/ArrivalTargetDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalTargetDate__c</fullName>
    <defaultValue>TODAY()+7</defaultValue>
    <description>This is used in  Approval process for special Freights.</description>
    <inlineHelpText>Please enter the expected arrival target date</inlineHelpText>
    <label>Arrival Target Date</label>
    <type>Date</type>
</CustomField>