force-app/main/default/objects/IFv2_Request__c/fields/Attachment_CRC_Values__c.field-meta.xml
<CustomField>
    <fullName>Attachment_CRC_Values__c</fullName>
    <label>Attachment CRC Values</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>