force-app/main/default/objects/IFv2_Request__c/fields/B2B_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>B2B_BillingAddress__c</fullName>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>