force-app/main/default/objects/IFv2_Request__c/fields/B2B_Email__c.field-meta.xml
<CustomField>
    <fullName>B2B_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>