force-app/main/default/objects/IFv2_Request__c/fields/B2B_Language__c.field-meta.xml
<CustomField>
    <fullName>B2B_Language__c</fullName>
    <label>Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>