force-app/main/default/objects/IFv2_Request__c/fields/B2B_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>B2B_MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>