force-app/main/default/objects/IFv2_Request__c/fields/B2B_VATRegistrationNoForEUCustomers__c.field-meta.xml
<CustomField>
    <fullName>B2B_VATRegistrationNoForEUCustomers__c</fullName>
    <label>VAT Registration No. for EU Customers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>