force-app/main/default/objects/IFv2_Request__c/fields/BenefitsQuantifiable__c.field-meta.xml
<CustomField>
    <fullName>BenefitsQuantifiable__c</fullName>
    <description>Used in Employee Suggestion Scheme Workflow</description>
    <label>Benefits Quantifiable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>