force-app/main/default/objects/IFv2_Request__c/fields/BookAirTicket__c.field-meta.xml
<CustomField>
    <fullName>BookAirTicket__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Book Air Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>