force-app/main/default/objects/IFv2_Request__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OE</fullName>
            </value>
            <value>
                <fullName>OES</fullName>
            </value>
            <value>
                <fullName>IAM</fullName>
            </value>
            <value>
                <fullName>Several</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>