force-app/main/default/objects/IFv2_Request__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Indirect Purchasing approval</description>
    <inlineHelpText>Search Buyer</inlineHelpText>
    <label>Buyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BuyerRequests</relationshipName>
    <type>Lookup</type>
</CustomField>