force-app/main/default/objects/IFv2_Request__c/fields/BuyerCode__c.field-meta.xml
<CustomField>
    <fullName>BuyerCode__c</fullName>
    <description>Used in Purchasing Approval</description>
    <label>Buyer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>