force-app/main/default/objects/IFv2_Request__c/fields/BuyerDepartment__c.field-meta.xml
<CustomField>
    <fullName>BuyerDepartment__c</fullName>
    <formula>Buyer__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Department</label>
    <type>Text</type>
</CustomField>