force-app/main/default/objects/IFv2_Request__c/fields/BuyerEMail__c.field-meta.xml
<CustomField>
    <fullName>BuyerEMail__c</fullName>
    <description>Used in Indirect Purchasing Approval</description>
    <formula>Buyer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer E-Mail</label>
    <type>Text</type>
</CustomField>