force-app/main/default/objects/IFv2_Request__c/fields/BuyerLocation__c.field-meta.xml
<CustomField>
    <fullName>BuyerLocation__c</fullName>
    <description>Used in Indirect Purchasing Approval</description>
    <formula>Buyer__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Location</label>
    <type>Text</type>
</CustomField>