force-app/main/default/objects/IFv2_Request__c/fields/BuyerPhone__c.field-meta.xml
<CustomField>
    <fullName>BuyerPhone__c</fullName>
    <description>Used in Indirect Purchasing Approval</description>
    <formula>Buyer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Phone</label>
    <type>Text</type>
</CustomField>