force-app/main/default/objects/IFv2_Request__c/fields/BuyerRegion__c.field-meta.xml
<CustomField>
    <fullName>BuyerRegion__c</fullName>
    <label>Buyer Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>