force-app/main/default/objects/IFv2_Request__c/fields/BuyerSubRegion__c.field-meta.xml
<CustomField>
    <fullName>BuyerSubRegion__c</fullName>
    <description>Used in Indirect Purchasing Approval</description>
    <label>Buyer Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BuyerRegion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Brits* (SGZA)</fullName>
            </value>
            <value>
                <fullName>Changchun (SGCN)</fullName>
            </value>
            <value>
                <fullName>Changsha (SGCN)</fullName>
            </value>
            <value>
                <fullName>Drancy (SGFR)</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Hildesheim (SGDE)</fullName>
            </value>
            <value>
                <fullName>Itupeva (SGBR)</fullName>
            </value>
            <value>
                <fullName>Lerma</fullName>
            </value>
            <value>
                <fullName>Miskolc (SGHU)</fullName>
            </value>
            <value>
                <fullName>Naganathapura (SGIN)</fullName>
            </value>
            <value>
                <fullName>Novi (SGUS)</fullName>
            </value>
            <value>
                <fullName>Stuttgart</fullName>
            </value>
            <value>
                <fullName>Torino (SGIT)</fullName>
            </value>
            <value>
                <fullName>Treto (SGES)</fullName>
            </value>
            <value>
                <fullName>Vila do Conde (SGPT)</fullName>
            </value>
            <value>
                <fullName>Yokohama (SGJP)</fullName>
            </value>
            <value>
                <fullName>Yongin-si (SGSK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>