force-app/main/default/objects/IFv2_Request__c/fields/CategoryCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>CategoryCodeDescription__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Category Code Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QS-RM001-0010 Concession inhouse production (product)</fullName>
            </value>
            <value>
                <fullName>QS-RM001-0020 Concession inhouse production (process)</fullName>
            </value>
            <value>
                <fullName>QS-RM001-0030 Concession inhouse production (product and customer)</fullName>
            </value>
            <value>
                <fullName>QS-RM001-0040 Concession inhouse production (process and customer)</fullName>
            </value>
            <value>
                <fullName>QS-RM002-0030 Concession external procurement (supplier, SOP)</fullName>
            </value>
            <value>
                <fullName>QS-RM002-0040 Concession external procurement (supplier, repet. manufact.)</fullName>
            </value>
            <value>
                <fullName>QS-RM003-0050 Concession external procurement (internal, SOP)</fullName>
            </value>
            <value>
                <fullName>QS-RM003-0060 Concession external procurement (internal, repet. manufact.)</fullName>
            </value>
            <value>
                <fullName>QS-RM004-0010 pres-series conc.(in-house production) pre-series conc. (product)</fullName>
            </value>
            <value>
                <fullName>QS-RM004-0020 pres-series conc.(in-house production) pre-series conc. (process)</fullName>
            </value>
            <value>
                <fullName>QS-RM004-0030 pres-series conc.(in-house production) pre-series conc. (product and customer)</fullName>
            </value>
            <value>
                <fullName>QS-RM004-0040 pres-series conc.(in-house production) pre-series conc. (process and customer)</fullName>
            </value>
            <value>
                <fullName>QS-RM005-0070 pres-series conc.(external procurement) pre-series conc. (resp: internal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>