force-app/main/default/objects/IFv2_Request__c/fields/ChallanTypeofGatePass__c.field-meta.xml
<CustomField>
    <fullName>ChallanTypeofGatePass__c</fullName>
    <description>Type of Gate Pass</description>
    <inlineHelpText>Enter the type of gate pass for the challan</inlineHelpText>
    <label>Challan - Type of Gate Pass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returnable</fullName>
            </value>
            <value>
                <fullName>Non - Returnable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>