force-app/main/default/objects/IFv2_Request__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>This is used in Workflow release of documented procedures.
Used in Employee Suggestion Scheme US MX</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>