force-app/main/default/objects/IFv2_Request__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>71F0</fullName>
            </value>
            <value>
                <fullName>70A0</fullName>
            </value>
            <value>
                <fullName>70B0</fullName>
            </value>
            <value>
                <fullName>70D0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>