force-app/main/default/objects/IFv2_Request__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <description>Used for SCAN records in APM workflows</description>
    <inlineHelpText>The SAP company code</inlineHelpText>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>