force-app/main/default/objects/IFv2_Request__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>