force-app/main/default/objects/IFv2_Request__c/fields/CompletedMigrations__c.field-meta.xml
<CustomField>
    <fullName>CompletedMigrations__c</fullName>
    <description>Contains comma separated list of completed migrations</description>
    <label>Completed Migrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>