force-app/main/default/objects/IFv2_Request__c/fields/ConcessionAttachmentResponse__c.field-meta.xml
<CustomField>
    <fullName>ConcessionAttachmentResponse__c</fullName>
    <description>This is used in Concession workflow</description>
    <label>Concession Attachment Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>