force-app/main/default/objects/IFv2_Request__c/fields/ConcessionDescription__c.field-meta.xml
<CustomField>
    <fullName>ConcessionDescription__c</fullName>
    <description>Used in Concession workflow.</description>
    <inlineHelpText>Maximum Characters Allowed - 132</inlineHelpText>
    <label>Description</label>
    <length>132</length>
    <type>Text</type>
</CustomField>