force-app/main/default/objects/IFv2_Request__c/fields/ConcessionErrorResponse__c.field-meta.xml
<CustomField>
    <fullName>ConcessionErrorResponse__c</fullName>
    <description>To store error response of concession record</description>
    <label>ConcessionErrorResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>