force-app/main/default/objects/IFv2_Request__c/fields/ContentversionIds__c.field-meta.xml
<CustomField>
    <fullName>ContentversionIds__c</fullName>
    <label>ContentversionIds</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>