force-app/main/default/objects/IFv2_Request__c/fields/Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Correspondence__c</fullName>
    <label>Correspondence</label>
    <type>TextArea</type>
</CustomField>