force-app/main/default/objects/IFv2_Request__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <inlineHelpText>Please enter the Cost Center</inlineHelpText>
    <label>Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>