force-app/main/default/objects/IFv2_Request__c/fields/CurrencyNew__c.field-meta.xml
<CustomField>
    <fullName>CurrencyNew__c</fullName>
    <label>Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>