force-app/main/default/objects/IFv2_Request__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Address with PIN code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>