force-app/main/default/objects/IFv2_Request__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Supplier/Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>