force-app/main/default/objects/IFv2_Request__c/fields/CustomerGSTIN__c.field-meta.xml
<CustomField>
    <fullName>CustomerGSTIN__c</fullName>
    <label>GSTIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>