force-app/main/default/objects/IFv2_Request__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>