force-app/main/default/objects/IFv2_Request__c/fields/DaysOverdue__c.field-meta.xml
<CustomField>
    <fullName>DaysOverdue__c</fullName>
    <formula>IF( TODAY() - DueDateofReturn__c &gt; 0, TODAY() - DueDateofReturn__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>