force-app/main/default/objects/IFv2_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Used for Badgemanagement (mandatory)</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>