force-app/main/default/objects/IFv2_Request__c/fields/DetailLink__c.field-meta.xml
<CustomField>
    <fullName>DetailLink__c</fullName>
    <formula>$User.IFv2_InstanceDomain__c+&apos;apex/IFv2_ThankYouForWaiting?Id=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DetailLink</label>
    <type>Text</type>
</CustomField>