force-app/main/default/objects/IFv2_Request__c/fields/DirectPurchaseCOQ__c.field-meta.xml
<CustomField>
    <fullName>DirectPurchaseCOQ__c</fullName>
    <inlineHelpText>Fill this field when Subject type is COQ Approval</inlineHelpText>
    <label>Explanation of deviations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>