force-app/main/default/objects/IFv2_Request__c/fields/DisplayApprovalHistory__c.field-meta.xml
<CustomField>
    <fullName>DisplayApprovalHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True - for displaying both Old and New Approval History Related List
False - only new Approval History</description>
    <inlineHelpText>True - for displaying both Old and New Approval History Related List
False - only new Approval History</inlineHelpText>
    <label>Display Approval History</label>
    <type>Checkbox</type>
</CustomField>