force-app/main/default/objects/IFv2_Request__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGMX</fullName>
            </value>
            <value>
                <fullName>SGUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>