force-app/main/default/objects/IFv2_Request__c/fields/DueDateofReturn__c.field-meta.xml
<CustomField>
    <fullName>DueDateofReturn__c</fullName>
    <label>Due Date of Return</label>
    <type>Date</type>
</CustomField>