force-app/main/default/objects/IFv2_Request__c/fields/Employee_Position__c.field-meta.xml
<CustomField>
    <fullName>Employee_Position__c</fullName>
    <label>Employee Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>